k8s/local/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-mysql
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service-mysql
  template:
    metadata:
      labels:
        app: user-service-mysql
    spec:
      containers:
        - name: user-service-mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: user-service-mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-mysql
  namespace: default
spec:
  selector:
    app: user-service-mysql
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
